--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
 		<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
 		<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script>-->
 		<script>
-		  var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-		  //var socket = io.connect('http://localhost:1337');
+		  //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
+		  var socket = io.connect('http://localhost:1337');
 		  function buttonClicked(numClicked){
 			//alert("clicked " + numClicked);
 			socket.emit('mymessage', { my: numClicked });
