Opening the converted presentation.
TODO:  passing the URL to RECIEVER

--- a/www/RECIEVER_POWERPOINT.html
+++ b/www/RECIEVER_POWERPOINT.html
@@ -24,7 +24,8 @@
 		switch(button)
 		{
 			case -101: {
-				window.location.href = "index.html";
+				//window.location.href = "index.html";
+			        window.location.href = "http://localhost:1337/TEST/MA/Weather_delivery.pptx.html/Weather_delivery.html";
 				break;
 			}
 			case -1: {
