Uploading, converting to html, displaying and changing slides now works.
TODO: the number of slides is hardcoded to 14, should be determined
automatically.

--- a/www/POWERPOINT_UPLOAD.html
+++ b/www/POWERPOINT_UPLOAD.html
@@ -11,7 +11,7 @@
     <link class="rs-file" href="royalslider.css" rel="stylesheet">
 	
 	<link rel="stylesheet" type="text/css" href="index1.css">
-	<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
+	<script src="http://localhost:1337/socket.io/socket.io.js"></script>
 	<script src="client.js"></script>
 	<script>
 	  	//var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
@@ -47,7 +47,7 @@
 			siofu.addEventListener("complete", function(event){
 				console.log(event.success);
 				console.log(event.file);
-				socket.emit('fileUploaded', { myComplete: "complete"});
+				socket.emit('newSlides', { myComplete: "complete", myFile: event.file});
 			});
 
 		}, false);
