--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>SENDER</title>
 		<link rel="stylesheet" type="text/css" href="index1.css">
-		<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
+		<script src="http://localhost:1337/socket.io/socket.io.js"></script>
 		<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script>-->
 		<script>
 		  //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
