Changed socket.io source to nodejitsu server. Added missing rs-default.png.

--- a/www/POWERPOINT_UPLOAD.html
+++ b/www/POWERPOINT_UPLOAD.html
@@ -11,11 +11,12 @@
     <link class="rs-file" href="royalslider.css" rel="stylesheet">
 	
 	<link rel="stylesheet" type="text/css" href="index1.css">
-	<script src="http://localhost:1337/socket.io/socket.io.js"></script>
+	<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script> -->
+	<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
 	<script src="client.js"></script>
 	<script>
-	  	//var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-		var socket = io.connect('http://localhost:1337');
+	  	var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
+		//var socket = io.connect('http://localhost:1337');
 		
 		document.addEventListener("DOMContentLoaded", function(){
 
