Added redirect page, which loads slides upon upload. Moved the test HTML slides to www dir.

--- a/www/RECIEVER_POWERPOINT.html
+++ b/www/RECIEVER_POWERPOINT.html
@@ -15,15 +15,15 @@
 	<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script> -->
 	<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
 	<script>
-	  	var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-	  	//var socket = io.connect('http://localhost:1337');
+	  	//var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
+	  	var socket = io.connect('http://localhost:1337');
 		
 	  	socket.on('fileConverted', function (data) {
 			//console.log("JD: received from remote this data: " + JSON.stringify(data));
 			for (var slide = 1; slide <= data.num_slides; ++slide) {	
 				//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\Weather_delivery.pptx.html\\";
-				//var slide_html_path = data.filename;
-				var slide_html_path= "./Weather_delivery.pptx.html/";
+				var slide_html_path = data.filename;
+				//var slide_html_path= "./Weather_delivery.pptx.html/";
 				var slide_html= "<div style='text-align:center' id=slide class='rsContent'>" 
 					+ "<iframe src='"+slide_html_path+".html/img"+slide+".html' width='850' height='850' seamless> </iframe>"   
 					+ "<div class='rsTmb'>"
