Redirect to http://mobileremotecontrol.info/marov/f418Vz6p/

--- a/www/POWERPOINT_UPLOAD_redirect.html
+++ b/www/POWERPOINT_UPLOAD_redirect.html
@@ -48,7 +48,7 @@
 			siofu.addEventListener("complete", function(event){
 				console.log(event.success);
 				console.log(event.file);
-				window.location.href = "RECIEVER_POWERPOINT_static.html?" + Math.random();
+				window.location.href = "f418Vz6p";
 			});
 
 		}, false);
