--- a/www/index.html
+++ b/www/index.html
@@ -4,17 +4,31 @@
 		<link rel="stylesheet" type="text/css" href="index1.css">
 		<script src="http://localhost:1337/socket.io/socket.io.js"></script>
 		<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script>-->
+    <script src="jquery-1.8.3.js"></script>
 		<script>
 		  //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
 		  var socket = io.connect('http://localhost:1337');
 		  function buttonClicked(numClicked){
-			//alert("clicked " + numClicked);
-			socket.emit('mymessage', { my: numClicked });
-		  }
+        //alert("clicked " + numClicked);
+        socket.emit('mymessage', { my: numClicked });
+		  }      
 		</script>
-
+  
+  <style>
+  	#laserPointer {
+      position: relative;
+		  left: 40px; 
+		  top: 50px; 
+		  width: 100%;
+		  max-width: 400px;
+		}
+  </style>
 	</head>
 <body>
+<div id="laserPointer">
+  <img id="testSlide" src="Weather_delivery.png">
+</div>
+<!--<div id="log">this is the log</div> [Lev]: log for testing only, remove for the build-->
 <div id="remote-control">
 	<h2>
 		Main navigation
@@ -55,5 +69,6 @@
 		<li id="ok"><a href="javascript:buttonClicked(0)" title="OK - start slideshow"><span>OK - start slideshow</span></a></li>
 	</ul>
 </div>
+<script src="LASER_CONTROL.js"></script>
 </BODY>
 </HTML>
