testing out new UI. Its just a wireframe for now.

--- a/www/index.html
+++ b/www/index.html
@@ -13,20 +13,10 @@
         socket.emit('mymessage', { my: numClicked });
 		  }      
 		</script>
-  
-  <style>
-  	#laserPointer {
-      position: relative;
-		  left: 40px; 
-		  top: 50px; 
-		  width: 100%;
-		  max-width: 400px;
-		}
-  </style>
 	</head>
 <body>
 <div id="laserPointer">
-  <img id="testSlide" src="Weather_delivery.png">
+  <img id="testSlide" src="./img/laser_test_slide.jpg">
 </div>
 <!--<div id="log">this is the log</div> [Lev]: log for testing only, remove for the build-->
 <div id="remote-control">
