--- a/www/RECIEVER_POWERPOINT_static.html
+++ b/www/RECIEVER_POWERPOINT_static.html
@@ -190,7 +190,7 @@
       position: absolute;
       left: 2%;
       top: 10%;
-      height: 75%;
+      height: 85%;
       width: 65%;
       border: solid; 
       z-index: 1;
@@ -203,9 +203,8 @@
 <body>
   <canvas id="myCanvas" width="670" height="450" ></canvas>
   <div id="redDot"><img src="./img/redDot.png" alt="Laser Pointer"></div>
-	<div id="video-gallery" class="royalSlider videoGallery rsDefault">
-    <canvas id="myCanvas" width="670" height="450" ></canvas>
-  </div>
+  <canvas id="myCanvas" width="670" height="450" ></canvas>
+  <div id="video-gallery" class="royalSlider videoGallery rsDefault"></div>
 	<script>		
 		jQuery(document).ready(function($) {
 				  $('#video-gallery').royalSlider({
