--- a/www/POWERPOINT_UPLOAD.html
+++ b/www/POWERPOINT_UPLOAD.html
@@ -6,7 +6,7 @@
     
     <script src="./js/jquery-1.8.3.js"></script>
     <script src="./js/jquery-ui-1.8.22.custom.min.js"></script>
-    <script class="rs-file" src="./css/jquery.royalslider.min.js"></script>
+    <script class="rs-file" src="./js/jquery.royalslider.min.js"></script>
     <link href="./css/jquery-ui-1.8.22.custom.css" rel="stylesheet">
     <link class="rs-file" href="./css/royalslider.css" rel="stylesheet">
 	
