Correct numbering of slides in the presentation. The title shows correctly as the first (not 0).

--- a/www/RECIEVER_POWERPOINT_static.html
+++ b/www/RECIEVER_POWERPOINT_static.html
@@ -244,12 +244,14 @@
 						navigateByCenterClick: true
 					}
 				  });
-					for (var slide = 1; slide <= 14; ++slide) {	
-						//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\Weather_delivery.pptx.html\\";
+					for (var slide = 1; slide <= 16; ++slide) {	
+						//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\SliteShow_PitchDeck.pptx.html\\";
 						//var slide_html_path = data.filename;
-						var slide_html_path= "../BACKEND/TEST/MA/Weather_delivery.pptx";
+						var slide_html_path= "../BACKEND/TEST/MA/SliteShow_PitchDeck.pptx";
+						if (slide == 1) slide_html_path += ".html/SliteShow_PitchDeck.html";
+						else slide_html_path += ".html/img"+slide+".html";
 						var slide_html= "<div style='text-align:center' id=slide class='rsContent'>" 
-							+ "<iframe src='"+slide_html_path+".html/img"+slide+".html' width='850' height='850' seamless> </iframe>"   
+							+ "<iframe src='"+slide_html_path+"' width='850' height='850' seamless> </iframe>"   
 							+ "<div class='rsTmb'>"
 							+ "<h5>SLIDE"+slide+"</h5>"
 							+ "     <span>Slide "+slide+" here</span>"
