--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,9 @@
     <div class="UI topRow rightCol" id="time">time</div>
     <br>
     <div class="UI midRow leftCol" id="notes">notes</div>
-    <div class="UI midRow midCol" id="currentSlide">current</div>
+    <div class="UI midRow midCol" id="currentSlide">
+	<iframe src="../BACKEND/TEST/MA/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html" width='185' height='185' seamless></iframe>
+	</div>
     <div class="UI midRow rightCol" id="otherSlides">other</div>
     <br>
     <div class="UI botRow" id="prev"><input id="prevButton" type="button" value="Prev"/></div>
