--- a/www/RECIEVER_POWERPOINT_static.html
+++ b/www/RECIEVER_POWERPOINT_static.html
@@ -41,10 +41,12 @@
         }
         case 100: {
           slider.next();
+          clearCanvas();
           break;
         }
         case 101: {
           slider.prev();
+          clearCanvas();
           break;
         }
         default: {
@@ -188,10 +190,8 @@
     
     #myCanvas {
       position: absolute;
-      left: 2%;
-      top: 10%;
-      height: 85%;
-      width: 65%;
+      height: 99%;
+      width: 99%;
       border: solid; 
       z-index: 1;
     }
@@ -201,9 +201,9 @@
 </head>
 
 <body>
-  <canvas id="myCanvas" width="670" height="450" ></canvas>
-  <div id="redDot"><img src="./img/redDot.png" alt="Laser Pointer"></div>
-  <canvas id="myCanvas" width="670" height="450" ></canvas>
+    <canvas id="myCanvas" ></canvas>
+    <div id="redDot"><img src="./img/redDot.png" alt="Laser Pointer"></div>
+  
   <div id="video-gallery" class="royalSlider videoGallery rsDefault"></div>
 	<script>		
 		jQuery(document).ready(function($) {
@@ -261,6 +261,7 @@
 			});
 
 	</script>
+  
   
 
 </body>
