--- a/BACKEND/TEST/MA/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/BACKEND/TEST/MA/SliteShow_PitchDeck.pptx.html/img2.html
@@ -9,6 +9,10 @@ SLITE web presentation</title>
 <body>
 <center>
 <a href="SliteShow_PitchDeck.html">First page</a> <a href="img1.html">Back</a> <a href="img3.html">Continue</a> <a href="img15.html">Last page</a> <a href="text2.html">Text</a></center><br>
-<center><img src="img2.jpg" alt=""></center>
+<center><img src="img2.jpg" alt="">
+<iframe width="420" height="345"
+src="http://www.youtube.com/embed/IYUBioWs7Gs">
+</iframe>
+</center>
 </body>
 </html>
