--- a/www/index.html
+++ b/www/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
 		<title>SENDER</title>
 		<link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
-		<script src="http://localhost:1337/socket.io/socket.io.js"></script>
+		<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
 		<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script>-->
     <script src="./js/jquery-1.8.3.js"></script>
     <script> 
-      //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-      var socket = io.connect('http://localhost:1337');
+      var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
+      //var socket = io.connect('http://localhost:1337');
     </script>
-    <script defer src="./js/LASER_CONTROL_mobile.js"></script>
+    <script defer src="./js/LASER_CONTROL.js"></script>
     
 	</head>
 <body onload="startup()">
@@ -23,7 +23,7 @@
     <div class="UI midRow leftCol" id="notes">notes</div>
 
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">&nbsp;
-	  <!--<iframe class="frame" src="../BACKEND/TEST/MA/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html" width='185' height='185' seamless></iframe>-->
+	  <iframe class="frame" src="http://mobileremotecontrol.info/marov/A1/" width='185' height='185' seamless></iframe>
 	</div>
 
     <div class="UI midRow rightCol" id="otherSlides">other</div>
