--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     
 	</head>
 <body onload="startup()">
-  <div id="main">
+  <!--<div id="main"></div>-->
     <div class="UI topRow leftCol" id="menu">menu</div>
     <div class="UI topRow midCol" id="URLBox">URL</div>
     <div class="UI topRow rightCol" id="time">time</div>
@@ -23,6 +23,7 @@
     <div class="UI midRow leftCol" id="notes">notes</div>
 
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">&nbsp;
+        <!--<img src="../BACKEND/TEST/MA/SliteShow_PitchDeck.pptx.html/img0.jpg">-->
 	  <!--<iframe class="frame" src="../BACKEND/TEST/MA/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html" width='185' height='185' seamless></iframe>-->
 	</div>
 
@@ -35,6 +36,6 @@
     <div class="UI botRow" id="draw">Draw</div>
     <div class="UI botRow" id="filler">&nbsp;</div>
     <div class="UI botRow" id="next">&nbsp;</div>
-  </div>
+  
 </body>
 </html>
