--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,12 @@
 		<!--<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>-->
 		<script src="http://localhost:1337/socket.io/socket.io.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script> 
       //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
       var socket = io.connect('http://localhost:1337');
     </script>
-    <script defer src="./js/LASER_CONTROL.js"></script>
+    <script defer src="./js/LASER_CONTROL_mobile.js"></script>
     
 	</head>
 <body onload="startup()">
@@ -24,7 +25,7 @@
 
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
       <div id="overlay"></div>
-      <iframe class="frame" id="theIframe" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>
+      <!--<iframe class="frame" id="theIframe" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>-->
     </div>
 
     <div class="UI midRow rightCol" id="otherSlides">other</div>
