--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
       <div id="overlay"></div>
-      <!--<iframe class="frame" id="theIframe" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>-->
+      <iframe class="frame" id="theIframe" src="RECIEVER_POWERPOINT_static.html" seamless></iframe>
     </div>
 
     <div class="UI midRow rightCol" id="otherSlides">other</div>
