--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
       <div id="overlay"></div>
-      <!--<iframe class="frame" id="theIframe" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>-->
+      <iframe class="frame" id="theIframe" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>
     </div>
 
     <div class="UI midRow rightCol" id="otherSlides">other</div>
@@ -37,7 +37,6 @@
     <div class="UI botRow" id="draw">Draw</div>
     <div class="UI botRow" id="filler">&nbsp;</div>
     <div class="UI botRow" id="next">next&nbsp;</div>
-    </div>
 </body>
 </html>
 
