Disabled scrolling, now works on physical device

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,6 @@
     
 	</head>
 <body onload="startup()">
-  <!--<div id="main"></div>-->
     <div class="UI topRow leftCol" id="menu">menu</div>
     <div class="UI topRow midCol" id="URLBox">URL</div>
     <div class="UI topRow rightCol" id="time">time</div>
@@ -25,7 +24,7 @@
 
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
       <div id="overlay"></div>
-      <iframe class="frame" id="theIframe" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>
+      <iframe id="theIframe" class="frame" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe>
     </div>
 
     <div class="UI midRow rightCol" id="otherSlides">other</div>
