Laser Scaling, Canvas Resize,
The canvas in RECEIVER_static now scales when the window is resized.
Laser now scales with window size(still some issues though).

--- a/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
+++ b/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
@@ -215,7 +215,7 @@
 
 </head>
 
-<body>
+<body onresize="resizeCanvas()">
     <canvas id="myCanvas" ></canvas>
     <div id="redDot"><img src="./img/redDot.png" alt="Laser Pointer"></div>
   
