--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
-    <script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
-		<!--<script src="http://localhost:1337/socket.io/socket.io.js"></script>-->
+    <!--<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>-->
+    <script src="http://localhost:1337/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
     <script> 
