--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
-    <!--<script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>-->
+    <script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
     <script src="http://localhost:1337/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
-    <script> 
-      //var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
-      var socket = io.connect('http://localhost:1337');
+    <script src="./js/speechRecognizer.js"></script>
+
+    <script>
+      var socket = io.connect('http://remotecontrol.nodejitsu.com:80');
+      //var socket = io.connect('http://localhost:1337');
     </script>
     <script defer src="./js/LASER_CONTROL_mobile.js"></script>
     
@@ -23,7 +25,7 @@
     ><div class="UI midRow leftCol" id="notes">notes</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="http://mobileremotecontrol.info/marov/A1/" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="RECIEVER_POWERPOINT_static.html" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">other</div
     ><br
@@ -32,6 +34,8 @@
     ><div class="UI botRow" id="laser">&nbsp;</div
     ><div class="UI botRow" id="filler">&nbsp;</div
     ><div class="UI botRow" id="draw">&nbsp;</div
+    ><div class="UI botRow" id="filler">&nbsp;</div
+    ><div class="UI botRow" id="speech">&nbsp;</div
     ><div class="UI botRow" id="filler">&nbsp;</div
     ><div class="UI botRow" id="next">&nbsp;</div
 ></body>
