Small tweaks for _static.html for main website
Made same small tweeks for our main website and deployed it there

--- a/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
+++ b/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
@@ -91,7 +91,7 @@
 	
     
     <!-- syntax highlighter -->
-    <script src="highlight.pack.js"></script>
+    <script src="./js/highlight.pack.js"></script>
     <script> hljs.initHighlightingOnLoad();</script>
 
 
@@ -262,7 +262,7 @@
 					for (var slide = 1; slide <= 16; ++slide) {	
 						//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\SliteShow_PitchDeck.pptx.html\\";
 						//var slide_html_path = data.filename;
-						var slide_html_path= "./TEST/MA/SliteShow_PitchDeck.pptx";
+						var slide_html_path= "./PPT/SliteShow_PitchDeck.pptx";
 						if (slide == 1) slide_html_path += ".html/SliteShow_PitchDeck.html";
 						else slide_html_path += ".html/img"+slide+".html";
 						var slide_html= "<div style='text-align:center' id=slide class='rsContent'>" 
