Changed index.html to point to http://slite.us/A1

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>SENDER</title>
     <link rel="stylesheet" type="text/css" href="./css/lev_index_temp.css">
-    <script src="http://remotecontrol.nodejitsu.com:80/socket.io/socket.io.js"></script>
+    <script src="./js/socket.io.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script src="./js/jquery-1.8.3.js"></script>
     <script src="./js/speechRecognizer.js"></script>
@@ -24,7 +24,7 @@
     ><div class="UI midRow leftCol" id="notes">notes</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="RECIEVER_POWERPOINT_static.html" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">other</div
     ><br
