--- a/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
+++ b/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
@@ -197,7 +197,7 @@
 		}
     
     #redDot {
-      position: relative;
+      position: absolute;
       left:0px;
       top:0px;
       z-index: 2;
