Restored link to slite.us

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -24,7 +24,7 @@
     ><div class="UI midRow leftCol" id="notes">notes</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="RECIEVER_POWERPOINT_static.html" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">other</div
     ><br
