--- a/BACKEND/FRONTEND/www/PPT/SliteShow_PitchDeck.pptx.html/img6.html
+++ b/BACKEND/FRONTEND/www/PPT/SliteShow_PitchDeck.pptx.html/img6.html
@@ -4,10 +4,15 @@
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Slide 7</title>
+   
+   	<style>
+		body{
+			font-size: 16px;
+		}
+	</style>
+	
 </head>
 <body>
-<center>
-<a href="SliteShow_PitchDeck.html">First page</a> <a href="img5.html">Back</a> <a href="img7.html">Continue</a> <a href="img15.html">Last page</a> <a href="text6.html">Text</a></center><br>
-<center><img src="img6.jpg" alt=""></center>
+<iframe name="img6" src="img6.txt" width="1097" height="904" seamless"></iframe>
 </body>
 </html>
