Fixed timer font and top margin
Timer font now large and bold. Top margin no longer collides with
default iPhone battery and carrier icons.

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -17,9 +17,10 @@
     
 	</head>
 <body onload="startup()"
+    ><br
     ><div class="UI topRow leftCol" id="menu">menu</div
     ><div class="UI topRow midCol" id="URLBox">URL</div
-    ><div class="UI topRow rightCol" id="timeDisplay">00:00:00</div
+    ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
     ><br
     ><div class="UI midRow leftCol" id="notes">notes</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
