Notes now change, new speech icon

--- a/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
+++ b/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
@@ -210,10 +210,11 @@
     
     #myCanvas {
       position: absolute;
-      height: 99%;
-      width: 99%;
-      border: solid; 
+      height: 100%;
+      width: 100%;
+      border: none;
       z-index: 1;
+      pointer-events: none;
     }
 	
 	</style>
