--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -19,10 +19,10 @@
 <body onload="startup()"
     ><br
     ><div class="UI topRow leftCol" id="menu">menu</div
-    ><div class="UI topRow midCol" id="URLBox">URL</div
+    ><div class="UI topRow midCol" id="URLBox">http://slite.us/<input type="text" value="A1"></div
     ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
     ><br
-    ><div class="UI midRow leftCol" id="notes">notes</div
+    ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
         ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
