--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -25,7 +25,7 @@
     ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
-        ><iframe id="theIframe" class="frame" src="http://slite.us/A1" seamless></iframe
+        ><iframe id="theIframe" class="frame" src="RECIEVER_POWERPOINT_static.html" seamless></iframe
     ></div
     ><div class="UI midRow rightCol" id="otherSlides">other</div
     ><br
