--- a/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
+++ b/BACKEND/FRONTEND/www/RECIEVER_POWERPOINT_static.html
@@ -232,7 +232,15 @@
 					arrowsNav: false,
 					fadeinLoadedSlide: true,
 					controlNavigationSpacing: 0,
+					controlNavigation: 'none',
 
+					thumbs: {
+					  autoCenter: false,
+					  fitInViewport: true,
+					  orientation: 'vertical',
+					  spacing: 0,
+					  paddingBottom: 0
+					},
 					keyboardNavEnabled: true,
 					imageScaleMode: 'fill',
 					imageAlignCenter:true,
