Slides are full screen now (bug with extra space)

--- a/BACKEND/FRONTEND/www/A1/index.html
+++ b/BACKEND/FRONTEND/www/A1/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-	<title>Slite Pitch Deck/title>
+	<title>Slite Pitch Deck</title>
 	
 	    <!-- slider JS files -->
     
@@ -116,7 +116,7 @@
 	
 	
 		body{
-			background-color:rgba(0,0,255,0.3);
+			/* background-color:rgba(0,0,255,0.3); */
 		}
 	
 		#video-gallery {
@@ -244,6 +244,10 @@
 	    	height: 100%;
 	    	border-width: 1px;
 	    	border-style: dotted;
+	    }
+
+	    iframe * img{
+	    	width: 100%;
 	    }
 	
 	</style>
