--- a/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html
+++ b/BACKEND/FRONTEND/www/A1/PPT/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html
@@ -4,6 +4,17 @@
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
   <title>Slide 1</title>
+
+  <style>
+  	body{
+  		padding: 0px;
+  		margin: 0px;
+  	}
+
+  	img{
+  		width: 100%;
+  	}
+  </style>
 </head>
 <body>
 <center>
